2.8.3 - 05/09/2015
Added:
- Update package lists for repository 'slack' after upgrade distribution
Fixed:
- pip install

2.8.2 - 04/09/2015
Updated:
- Find SBo created Slackware packages
Fixed:
- Slackpkg update changelog.txt file
- Pylint errors

2.8.1 - 02/09/2015
Fixed:
- Path for build method
- Check if SBo package created
- Autobuild sources order list
Updated:
- Remove check if build
- Reference for repo-enable command

2.8.0 - 01/09/2015
Added:
- NEW configuration file for repositories in /etc/slpkg/repositories.conf
- Enable and disable repositories with command via dialog utility
Update:
- All configuration files
- Command line help logo
- Flags for packages upgrade
- Clear screen after exit dialog utility
Fixed:
- Remove None type packages
- Remove old sbo folder if exists before start build

2.7.6 - 28/08/2015
Fixed:
- Failed checksum message #40
- Removed calculate size
Updated:
- Print list packages from repositories

2.7.5 - 25/08/2015
Added:
- python2-pythondialog optional dependency
- "--checklist" option in remove packages
- Gigabyte unit in package manager
- Version in removed dependencies
- Size of removed dependencies
Updated:
- Function Msg() in self.msg
- Tracking dependencies

2.7.4 - 21/08/2015
Added:
- Support httpie for downloading
- Remove packages with by TAG
- Summary for size of removed package
Fixed:
- Resolving dependencies message for sbo repository when search for matching
packages
- Reference message for installing and upgrading packages
- Build error message
Updated:
- Install SBo packages with specific build number
- For SBo repository select computer architecture
- Module imports path

2.7.3 - 13/08/2015
Added:
- Tree view for deps-status command
Fixed:
- pasture/ directory for Slackware 14.0
Updated:
- Comments for Slackware ARM users in REPOSITORIES and slpkg.conf file
- slackpkg sync with ChangeLog.txt file

2.7.2 - 10/08/2015
Added:
- Support Slackware ARM
Fixed: