@@ -411,9 +411,9 @@ Command Line Tool Usage
           --remove, list, build, install,       Add or remove and print the list
           build-install                         of packages. Build and then install
                                                 the packages from the queue.
-      -g, --config, print, edit=[editor]        Configuration file management.
-                                                Print the configuration file or
-                                                edit.
+      -g, --config, print, edit=[editor],       Configuration file management.
+          reset                                 Print, edit the configuration file
+                                                or reset in the default values.
       -l, --list, [repository], --index,        Print a list of all available
           --installed                           packages repository, index or print
                                                 only packages installed on the
