@@ -535,7 +535,7 @@ class ArgParse(object):
         """Manage slpkg configuration file
         """
         options = ["-g", "--config"]
-        command = ["print", "edit="]
+        command = ["print", "edit=", "reset"]
         if (len(self.args) == 2 and self.args[0] in options and
                 self.args[1].startswith(command[1])):
             editor = self.args[1][len(command[1]):]
@@ -543,6 +543,9 @@ class ArgParse(object):
         elif (len(self.args) == 2 and self.args[0] in options and
                 self.args[1] == (command[0])):
             Config().view()
+        elif (len(self.args) == 2 and self.args[0] in options and
+                self.args[1] == (command[2])):
+            Config().reset()
         else:
             usage("")
 
